--- a/css/dependants/window_1200.css
+++ b/css/dependants/window_1200.css
@@ -34,7 +34,9 @@
         font-size:25px;
     }
 
-
+    .ctext {
+        font-size: 20px;
+    }
     /*----------------------------------------------------------------------*/
     /*Main question and Content Properties*/
 
