--- a/css/dependants/window_768.css
+++ b/css/dependants/window_768.css
@@ -32,7 +32,9 @@
         font-size:12px;
     }
 
-
+        .ctext {
+        font-size: 12px;
+    }
     /*----------------------------------------------------------------------*/
     /*Main question and Content Properties*/
 
