--- a/css/dependants/window_992.css
+++ b/css/dependants/window_992.css
@@ -34,6 +34,10 @@
         font-size:18px;
     }
 
+        .ctext {
+        font-size: 15px;
+    }
+
 
     /*----------------------------------------------------------------------*/
     /*Main question and Content Properties*/
